adicionando packges, javadoc e exceptions em analisador forca bruta