@@ -1,50 +1,61 @@
-// ======================== Importação de bibliotecas e declaração do package =========================
-package model.services;
+package Model.services;
 
-import model.entities.ForcaBruta;
 import java.util.HashMap;
 import java.util.Map;
 
-// ==================================== Declaração da classe e seus atributos =========================
+import Model.entities.ForcaBruta;
+import Model.exceptions.IpInvalidoException;
 
-public class AnalisadorForcaBruta extends AnalisadorTrafego{
+/**
+ * Analisador especializado em detectar ataques de força bruta.
+ * Acumula falhas de login por IP e dispara incidente ao atingir o limite.
+ */
+public class AnalisadorForcaBruta extends AnalisadorTrafego {
+    private Map<String, Integer> falhasPorIp;
+    private static final int LIMITE = 5;
 
-    private Map<String, ForcaBruta > incidentesPorIp;
-
-// ============================ Construtor e inicialização dos atributos =======================
-
-    public AnalisadorForcaBruta(SOCEngine engine){
-        super(engine);
-        this.incidentesPorIp = new HashMap<>();
+    /**
+     * Construtor que inicializa o mapa de rastreamento de falhas.
+     * 
+     * @param engine Motor SOC para enviar incidentes
+     * @param caminhoArquivo Caminho do arquivo de log
+     */
+    public AnalisadorForcaBruta(SOCEngine engine, String caminhoArquivo) {
+        super(engine, caminhoArquivo);
+        this.falhasPorIp = new HashMap<>();
     }
 
-// ====================================== Processamento e detecção do padrão de ataque =================================
-
+    /**
+     * Processa linha do log procurando por FALHA_LOGIN.
+     * Formato esperado: timestamp,ipOrigem,ipDestino,porta,FALHA_LOGIN
+     * 
+     * @param linhaLog Linha bruta do arquivo
+     */
     @Override
-    public void processarLinhaBruta(String linhaLog){
-        try{
-            if (linhaLog == null || linhaLog.trim().isEmpty()) return;
-            String[] partes = linhaLog.split("\\|");
+    public void processarLinhaBruta(String linhaLog) {
+        try {
+            if (linhaLog == null || linhaLog.isBlank()) return;
+            String[] campos = linhaLog.split(",");
+            if (campos.length != 5) return;
 
-            if (partes.length < 5) return;
+            String ipOrigem = campos[1].trim();
+            String ipDestino = campos[2].trim();
+            String acao = campos[4].trim();
 
-            String ipOrigem  = partes[1].trim();
-            String ipDestino = partes[2].trim();
-            String status    = partes[4].trim();
+            if (acao.equalsIgnoreCase("FALHA_LOGIN")) {
+                int tentativas = falhasPorIp.getOrDefault(ipOrigem, 0) + 1;
+                falhasPorIp.put(ipOrigem, tentativas);
 
-            if (status.equalsIgnoreCase("FAILED")){
-                if (incidentesPorIp.containsKey(ipOrigem)){
-                    ForcaBruta incidenteExistente = incidentesPorIp.get(ipOrigem);
-                    incidenteExistente.incrementarTentativas();
-                }else{
+                if (tentativas == LIMITE) {
                     ForcaBruta incidente = new ForcaBruta(ipOrigem, ipDestino);
-                    incidente.incrementarTentativas();
-                    incidentesPorIp.put(ipOrigem, incidente);
-                    engine.receberIncidente(incidente);
+                    this.engine.receberIncidente(incidente);
+                    falhasPorIp.put(ipOrigem, 0);
                 }
             }
-        }catch (Exception e){
-            System.out.println("  [AnalisadorForcaBruta] Erro ao processar linha: " + e.getMessage());
+        } catch (IpInvalidoException e) {
+            System.err.println("[AnalisadorForcaBruta] " + e.getMessage());
+        } catch (Exception e) {
+            // Ignora linha quebrada
         }
     }
 }
